# rhlunch

./: .coverage  .mcp.json  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: claude.yml  fetch-test-data.yml  tests.yml
lunchscraper/: __init__.py  base_scraper.py  cli.py  dish_classifier.py  iss_scraper.py  kvartersmenyn_scraper.py  mcp_server.py  nordrest_scraper.py  wkb_scraper.py
tests/: __init__.py  conftest.py  test_dish_classifier.py  test_iss_scraper.py  test_kvartersmenyn_scraper.py  test_nordrest_scraper.py
tests/fixtures/: README.md  fetch_test_data.py
tests/fixtures/2025_01_06/: iss_api_response.json
tests/fixtures/2025_11_07/: iss_gourmedia.html  iss_home.html  kvartersmenyn_filmhuset.html  kvartersmenyn_karavan.html
tests/fixtures/2025_11_10/: iss_gourmedia.html  iss_home.html  nordrest_gourmedia.html  nordrest_karavan.html
workflows/: fetch-test-data.yml
