[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhlunch"
version = "1.0.0"
description = "A CLI tool to scrape lunch menus from ISS restaurants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Daniel Engdahl", email = "daniel@example.com"}
]
keywords = ["lunch", "menu", "scraper", "cli", "iss", "restaurant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/engdahl/rhlunch"
Repository = "https://github.com/engdahl/rhlunch"
Issues = "https://github.com/engdahl/rhlunch/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "responses>=0.23.0",
]

[project.scripts]
lunch = "lunchscraper.cli:main"
rhlunch-mcp = "lunchscraper.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lunchscraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=lunchscraper",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["lunchscraper"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
